fixed listboxitem's padding property

--- a/CookPopularControl/Resources/Dictionaries/SystemConstValue.xaml
+++ b/CookPopularControl/Resources/Dictionaries/SystemConstValue.xaml
@@ -2,11 +2,11 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
-    <!--优点如下：如果有一天你的枚举类发生了变化，你不需要更新 GUI（XAML 文件）-->
+    <!--  优点如下：如果有一天你的枚举类发生了变化，你不需要更新 GUI（XAML 文件）  -->
     <!--<ObjectDataProvider x:Key="DefaultEnum" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
         <ObjectDataProvider.MethodParameters>
             <x:Type TypeName="Enum" Type="{x:Type sys:Enum}"/>
-        </ObjectDataProvider.MethodParameters> 
+        </ObjectDataProvider.MethodParameters>
     </ObjectDataProvider>-->
 
     <sys:Double x:Key="FirstTitleFontSize">20</sys:Double>
@@ -20,5 +20,7 @@
     <sys:Double x:Key="Double30Value">30</sys:Double>
 
     <sys:Double x:Key="DefaultControlHeight">30</sys:Double>
+
+    <Thickness x:Key="DefaultPadding">6,0,0,0</Thickness>
 
 </ResourceDictionary>
