--- a/CookPopularControl/Themes/BaseStyle/ControlBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/ControlBaseStyle.xaml
@@ -2,12 +2,16 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Resources/Dictionaries/SystemConstValue.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
                 <ControlTemplate>
                     <Rectangle Margin="2" SnapsToDevicePixels="true"
-                               Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+                               Stroke="{StaticResource {x:Static SystemColors.ControlTextBrushKey}}"
                                StrokeDashArray="1 2" StrokeThickness="1" />
                 </ControlTemplate>
             </Setter.Value>
@@ -19,7 +23,7 @@
             <Setter.Value>
                 <ControlTemplate>
                     <Rectangle Margin="10,0,0,0" SnapsToDevicePixels="true"
-                               Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
+                               Stroke="{StaticResource {x:Static SystemColors.ControlTextBrushKey}}"
                                StrokeDashArray="1 2" StrokeThickness="1" />
                 </ControlTemplate>
             </Setter.Value>
@@ -28,10 +32,10 @@
 
     <Style x:Key="FixedControlBaseStyle" TargetType="{x:Type Control}">
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
-        <Setter Property="Background" Value="White" />
+        <Setter Property="Background" Value="{DynamicResource SystemBackgroundBursh}" />
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
     </Style>
 
@@ -41,12 +45,12 @@
     </Style>
 
     <Style x:Key="SingleControlBaseStyle" TargetType="{x:Type Control}" BasedOn="{StaticResource ControlBaseStyle}">
-        <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
+        <Setter Property="Height" Value="{StaticResource DefaultControlHeight}" />
     </Style>
 
     <Style x:Key="InputControlBaseStyle" TargetType="{x:Type Control}" BasedOn="{StaticResource FixedControlBaseStyle}">
-        <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
-        <Setter Property="Padding" Value="6,0,0,0" />
+        <Setter Property="Height" Value="{StaticResource DefaultControlHeight}" />
+        <Setter Property="Padding" Value="{StaticResource DefaultPadding}" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource ValidationErrorBaseTemplate}" />
