--- a/CookPopularControl/Themes/ListBoxStyle.xaml
+++ b/CookPopularControl/Themes/ListBoxStyle.xaml
@@ -13,7 +13,7 @@
         <Setter Property="common:SelectorAttached.ItemControlWidth" Value="20" />
         <Setter Property="common:SelectorAttached.ItemControlHeight" Value="20" />
         <Setter Property="common:SelectorAttached.ItemWidth" Value="{Binding RelativeSource={RelativeSource Self}, Path=Width}" />
-        <Setter Property="common:SelectorAttached.ItemHeight" Value="{DynamicResource DefaultControlHeight}" />
+        <Setter Property="common:SelectorAttached.ItemHeight" Value="{StaticResource DefaultControlHeight}" />
         <Setter Property="common:SelectorAttached.ItemsListBackground" Value="{DynamicResource PrimaryThemeBrush}" />
         <Setter Property="common:SelectorAttached.ItemMouseOverBackground" Value="{DynamicResource ControlMouseOverBackground}" />
         <Setter Property="common:SelectorAttached.ItemSelectedBackground" Value="{DynamicResource ControlPressBackground}" />
